* Use 127.0.0.1 instead of localhost for drb (thanks Ola Bini)
* html story formatter correctly colors story/scenario red if step fails (Patch from Joseph Wilk). Closes #300
* plain text story formatter correctly colors story/scenario red if step fails (Patch from Joseph Wilk). Closes #439
* quiet deprecation warning on inflector - patch from RSL. Closes #430
* added autospec executable

== Version 1.1.4

Maintenance release.

Note: we've removed the metaclass method from Object. There were some
generated specs that used it, and they will now break. Just replace the
metaclass call with (class << self; self; end) and all will be well.

* added hash_including mock argument matcher. Closes #332 (patch from Rick DeNatale)
* pending steps print out yellow in stories (patch from Kyle Hargraves)
* Deprecation warnings for specs that assume auto-inclusion of modules. Closes #326 (patch from Scott Taylor)
* mock.should_not_receive(:anything) fails fast (once again)
* Patch from Antti Tarvainen to stop files from being loaded repeatedly when running heckle. Closes #333.
* Fixed bug in which session object in example was not the same instance used in the controller. Closes #331. 
* Applied patch from Antti Tarvainen to fix bug where heckle runs rspec runs heckle runs rspec etc. Closes #280.
* Applied patch from Zach Dennis to merge :steps functionality to :steps_for. Closes #324.
* Applied patch from Ryan Davis to add eval of block passed to raise_error matcher. Closes #321.
* alias :context :describe in example_group_methods. Closes #312.
* Applied patch from Ben Mabey to make the Story runner exit with a non-0 exit code on failing stories. Closes #228.
* Applied patch from Coda Hale to get the :red hook called in autotest. Closes #279.
* Applied patch from Patrick Ritchie to support --drb in spec.opts. Closes #274, #293.
* Moved metaclass method from Object to an internal module which gets included where it is needed.