@@ -23,6 +23,7 @@ module Spec
           match = matcher.matches?(actual, &block)
           ::Spec::Matchers.generated_description = "should #{describe_matcher(matcher)}"
           Spec::Expectations.fail_with(matcher.failure_message) unless match
+          match
         end
       end
     end
@@ -51,6 +52,7 @@ EOF
           match = matcher.matches?(actual, &block)
           ::Spec::Matchers.generated_description = "should not #{describe_matcher(matcher)}"
           Spec::Expectations.fail_with(matcher.negative_failure_message) if match
+          match
         end
       end
     end
