@@ -48,53 +48,73 @@ end
 
 module Spec
   module Expectations
-    describe ExpectationMatcherHandler, ".handle_matcher" do
-      it "should ask the matcher if it matches" do
-        matcher = mock("matcher")
-        actual = Object.new
-        matcher.should_receive(:matches?).with(actual).and_return(true)
-        ExpectationMatcherHandler.handle_matcher(actual, matcher)
-      end
-      
-      it "should explain when the matcher parameter is not a matcher" do
-        begin
-          nonmatcher = mock("nonmatcher")
+    describe ExpectationMatcherHandler do
+      describe "#handle_matcher" do
+        it "should ask the matcher if it matches" do
+          matcher = mock("matcher")
           actual = Object.new
-          ExpectationMatcherHandler.handle_matcher(actual, nonmatcher)
-        rescue Spec::Expectations::InvalidMatcherError => e
+          matcher.should_receive(:matches?).with(actual).and_return(true)
+          ExpectationMatcherHandler.handle_matcher(actual, matcher)
         end
+      
+        it "should explain when the matcher parameter is not a matcher" do
+          begin
+            nonmatcher = mock("nonmatcher")
+            actual = Object.new
+            ExpectationMatcherHandler.handle_matcher(actual, nonmatcher)
+          rescue Spec::Expectations::InvalidMatcherError => e
+          end
 
-        e.message.should =~ /^Expected a matcher, got /
+          e.message.should =~ /^Expected a matcher, got /
+        end
+        
+        it "should return the match value" do
+          matcher = mock("matcher")
+          actual = Object.new
+          matcher.should_receive(:matches?).with(actual).and_return(:this_value)
+          ExpectationMatcherHandler.handle_matcher(actual, matcher).should == :this_value
+        end
       end
     end
 
-    describe NegativeExpectationMatcherHandler, ".handle_matcher" do
-      it "should explain when matcher does not support should_not" do
-        matcher = mock("matcher")
-        matcher.stub!(:matches?)
-        actual = Object.new
-        lambda {
-          NegativeExpectationMatcherHandler.handle_matcher(actual, matcher)
-        }.should fail_with(/Matcher does not support should_not.\n/)
-      end      
-      
-      it "should ask the matcher if it matches" do
-        matcher = mock("matcher")
-        actual = Object.new
-        matcher.stub!(:negative_failure_message)
-        matcher.should_receive(:matches?).with(actual).and_return(false)
-        NegativeExpectationMatcherHandler.handle_matcher(actual, matcher)
-      end
-      
-      it "should explain when the matcher parameter is not a matcher" do
-        begin
-          nonmatcher = mock("nonmatcher")
+    describe NegativeExpectationMatcherHandler do
+      describe "#handle_matcher" do
+        it "should explain when matcher does not support should_not" do
+          matcher = mock("matcher")
+          matcher.stub!(:matches?)
           actual = Object.new
-          NegativeExpectationMatcherHandler.handle_matcher(actual, nonmatcher)
-        rescue Spec::Expectations::InvalidMatcherError => e
+          lambda {
+            NegativeExpectationMatcherHandler.handle_matcher(actual, matcher)
+          }.should fail_with(/Matcher does not support should_not.\n/)
+        end      
+      
+        it "should ask the matcher if it matches" do
+          matcher = mock("matcher")
+          actual = Object.new
+          matcher.stub!(:negative_failure_message)
+          matcher.should_receive(:matches?).with(actual).and_return(false)
+          NegativeExpectationMatcherHandler.handle_matcher(actual, matcher)
+        end
+      
+        it "should explain when the matcher parameter is not a matcher" do
+          begin
+            nonmatcher = mock("nonmatcher")
+            actual = Object.new
+            NegativeExpectationMatcherHandler.handle_matcher(actual, nonmatcher)
+          rescue Spec::Expectations::InvalidMatcherError => e
+          end
+
+          e.message.should =~ /^Expected a matcher, got /
         end
 
-        e.message.should =~ /^Expected a matcher, got /
+        
+        it "should return the match value" do
+          matcher = mock("matcher")
+          actual = Object.new
+          matcher.should_receive(:matches?).with(actual).and_return(false)
+          matcher.stub!(:negative_failure_message).and_return("ignore")
+          NegativeExpectationMatcherHandler.handle_matcher(actual, matcher).should be_false
+        end
       end
     end
     
@@ -123,6 +143,7 @@ module Spec
           5.should_not positive_only_matcher(:expected => 5)
         }.should fail_with(/Matcher does not support should_not.\n/)
       end
+
 
     end
   end
